# ai-tender-hackathon

./: .gitignore  README.md  goal.md  iteration_report.md  pyproject.toml  requirements.txt
data/: quality.sqlite3
data/codex_heuristic_mining/: failures.jsonl  heuristics_report.md  heuristics_synthesis.json  tender_analyses.jsonl
prozorro_quality/: __init__.py  analyzer.py  cli.py  codex_engine.py  config.py  models.py  parser.py  processor.py  prozorro_api.py  storage.py  web.py
prozorro_quality/static/: styles.css
prozorro_quality/templates/: base.html  detail.html  index.html
tests/: test_analyzer.py  test_codex_usage.py  test_parser.py  test_selection.py  test_storage.py  test_web.py
tools/: codex_heuristic_mining.py
